--- a/package.json
+++ b/package.json
@@ -2,20 +2,31 @@
   "name": "robofriends",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://evg1n.github.io/robofriends-redux-1",
   "dependencies": {
+    "gh-pages": "^2.0.1",
+    "ghpages": "0.0.10",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
-    "react-scripts": "1.0.17",
+    "react-scripts": "^2.1.3",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
     "tachyons": "^4.9.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
