--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,20 +1,30 @@
 version: 2
 jobs:
-  bobby:
+  build:
     docker:
-      - image: circleci/ruby:2.4.1
+      - image: circleci/node:10.16.0
     steps:
       - checkout
-      - run: echo "doubletrouble"
-  sally:
+      - run: echo "npm installing"
+      - run: npm install
+      - run: CI=true npm run build 
+  test:
     docker:
-      - image: circleci/ruby:2.4.1
+      - image: circleci/node:10.16.0
     steps:
       - checkout
-      - run: echo "doubletrouble"
+      - run: echo "tesing"
+      - run: npm install
+      - run: npm test
+  hithere:
+    - checkout
+    - run: echo "hello!"
 workflows:
   version: 2
-  bobby_sally:
+  build_test_and_lint:
     jobs:
-      - bobby
-      - sally
+      - build
+      - hithere
+      - test:
+        requires:
+          - hithere
