--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,8 +17,11 @@ jobs:
       - run: npm install
       - run: npm test
   hithere:
-    - checkout
-    - run: echo "hello!"
+    docker:
+      - image: circleci/node:10.16.0
+    steps:
+      - checkout
+      - run: echo "hello!"
 workflows:
   version: 2
   build_test_and_lint:
